fix issue with buttons wrapping with bold text on

--- a/src/app/pages/test-report/components/competency/competency.scss
+++ b/src/app/pages/test-report/components/competency/competency.scss
@@ -7,9 +7,6 @@
       width: 100%;
       justify-content: center;
     }
-    .competency-label {
-      margin-left: 15px;
-    }
 
     .fault-wrapper {
       display: flex;
